<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/result_tv"
        android:layout_margin="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#CCCBCB"
        android:id="@+id/buttons_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_c"
                android:text="@string/c"
                android:backgroundTint="#F44336"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_openbraces"
                android:text="@string/openbraces"
                android:backgroundTint="#A1A1A1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_closebraces"
                android:text="@string/closebraces"
                android:backgroundTint="#A1A1A1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_divide"
                android:text="@string/divide"
                android:backgroundTint="#FF9800"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_7"
                android:text="@string/_7"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_8"
                android:text="@string/_8"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_9"
                android:text="@string/_9"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_multiply"
                android:text="@string/multiply"
                android:backgroundTint="#FF9800"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_4"
                android:text="@string/_4"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_5"
                android:text="@string/_5"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_6"
                android:text="@string/_6"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_add"
                android:text="@string/add"
                android:backgroundTint="#FF9800"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_1"
                android:text="@string/_1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_2"
                android:text="@string/_2"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_3"
                android:text="@string/_3"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_sub"
                android:text="@string/sub"
                android:backgroundTint="#FF9800"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="20dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_ac"
                android:text="@string/ac1"
                android:backgroundTint="#F44336"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_0"
                android:text="@string/_0"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_dot"
                android:text="@string/dot"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="#FFF"
                android:layout_margin="12dp"
                android:id="@+id/button_equal"
                android:text="@string/equals"
                android:backgroundTint="#FF9800"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>